--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "test:e2e": "node tests/new-dat & nightwatch --env chrome",
     "start": "npm run watch-js & npm run watch-css & npm run watch-server",
     "watch-css": "nodemon --watch client -e scss -x \"npm run build-css\"",
-    "watch-js": "watchify --fast --verbose -g [ babelify --blacklist strict  ] client/js/app.js -o public/js/app.js",
+    "watch-js": "watchify --fast --verbose -t brfs -g [ babelify --blacklist strict  ] client/js/app.js -o public/js/app.js",
     "watch-server": "nodemon server/cli --watch server --watch client",
     "build": "npm run build-js && npm run build-css",
     "build-css": "npm run build-css-app && npm run build-css-website",
     "build-css-app": "node-sass --importer node_modules/node-sass-magic-importer client/scss/app.scss public/css/app.css",
     "build-css-website": "node-sass --importer node_modules/node-sass-magic-importer client/scss/website.scss public/css/website.css",
-    "build-js": "browserify -g [ babelify --blacklist strict  ] client/js/app.js > public/js/app.js",
-    "build-js-prod": "NODE_ENV=production node --max-executable-size=2000 ./node_modules/.bin/browserify -g [ babelify --blacklist strict  ] -t envify client/js/app.js > public/js/app.js",
+    "build-js": "browserify -t brfs -g [ babelify --blacklist strict  ] client/js/app.js > public/js/app.js",
+    "build-js-prod": "NODE_ENV=production node --max-executable-size=2000 ./node_modules/.bin/browserify -g [ babelify --blacklist strict  ] -t brfs -t envify client/js/app.js > public/js/app.js",
     "minify": "npm run minify-css && npm run minify-js",
     "minify-css": "minify public/css/app.css > public/css/app.min.css",
     "minify-js": "uglifyjs public/js/app.js -o public/js/app.min.js",
@@ -75,6 +75,7 @@
     "body": "^5.1.0",
     "body-parser": "^1.15.2",
     "bole": "^3.0.1",
+    "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "cheerio": "^0.22.0",
     "choo": "^3.2.0",
